# sddm-kcm

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  .reviewboardrc  ACKNOWLEDGEMENT  CMakeLists.txt  CONTRIBUTORS  Messages.sh  README  README.md  advanceconfig.cpp  advanceconfig.h  advanceconfig.ui  config.h  config.h.in  kcm_sddm.actions  kcm_sddm.desktop  kcm_sddm.json  sddmauthhelper.cpp  sddmauthhelper.h  sddmkcm.cpp  sddmkcm.h  sddmtheme.knsrc  sddmthemeinstaller.cpp  themeconfig.cpp  themeconfig.h  themeconfig.ui  thememetadata.cpp  thememetadata.h  themesdelegate.cpp  themesdelegate.h  themesmodel.cpp  themesmodel.h  usersmodel.cpp  usersmodel.h
configwidgets/: CMakeLists.txt  selectimagebuttondesignerfactory.cpp
cursortheme/: cursortheme.cpp  dummytheme.cpp  dummytheme.h  thememodel.cpp
po/ar/: kcm_sddm.po
po/ast/: kcm_sddm.po
po/az/: kcm_sddm.po
po/bg/: kcm_sddm.po
po/bs/: kcm_sddm.po
po/ca/: kcm_sddm.po
po/ca@valencia/: kcm_sddm.po
po/cs/: kcm_sddm.po
po/da/: kcm_sddm.po
po/de/: kcm_sddm.po
po/el/: kcm_sddm.po
po/en_GB/: kcm_sddm.po
po/eo/: kcm_sddm.po
po/es/: kcm_sddm.po
po/et/: kcm_sddm.po
po/eu/: kcm_sddm.po
po/fi/: kcm_sddm.po
po/fr/: kcm_sddm.po
po/ga/: kcm_sddm.po
po/gl/: kcm_sddm.po
po/he/: kcm_sddm.po
po/hi/: kcm_sddm.po
po/hu/: kcm_sddm.po
po/ia/: kcm_sddm.po
po/id/: kcm_sddm.po
po/is/: kcm_sddm.po
po/it/: kcm_sddm.po
po/ja/: kcm_sddm.po
po/ka/: kcm_sddm.po
po/ko/: kcm_sddm.po
po/lt/: kcm_sddm.po
po/lv/: kcm_sddm.po
po/ml/: kcm_sddm.po
po/nb/: kcm_sddm.po
po/nl/: kcm_sddm.po
po/nn/: kcm_sddm.po
po/pa/: kcm_sddm.po
po/pl/: kcm_sddm.po
po/pt/: kcm_sddm.po
po/pt_BR/: kcm_sddm.po
po/ro/: kcm_sddm.po
po/ru/: kcm_sddm.po
po/sa/: kcm_sddm.po
po/sk/: kcm_sddm.po
po/sl/: kcm_sddm.po
po/sr/: kcm_sddm.po
po/sr@ijekavian/: kcm_sddm.po
po/sr@ijekavianlatin/: kcm_sddm.po
po/sr@latin/: kcm_sddm.po
po/sv/: kcm_sddm.po
po/ta/: kcm_sddm.po
po/tr/: kcm_sddm.po
po/ug/: kcm_sddm.po
po/uk/: kcm_sddm.po
po/zh_CN/: kcm_sddm.po
po/zh_TW/: kcm_sddm.po
qml/: main.qml
src/: CMakeLists.txt  advanceconfig.cpp  advanceconfig.h  advancedconfig.cpp  advancedconfig.h  config.h.in  kcm_sddm.json  sddmdata.cpp  sddmdata.h  sddmkcm.cpp  sddmkcm.h  sddmsettings.kcfg  sddmsettings.kcfgc  sddmsettingsbase.cpp  sddmsettingsbase.h  sessionmodel.cpp  sessionmodel.h  themeconfig.cpp  themeconfig.h  thememetadata.cpp  thememetadata.h  themesdelegate.cpp  themesdelegate.h  themesmodel.cpp  themesmodel.h  usersmodel.cpp  usersmodel.h
src/configwidgets/: CMakeLists.txt  selectimagebutton.cpp  selectimagebutton.h  selectimagebuttondesignerfactory.cpp  selectimagebuttondesignerfactory.h
src/cursortheme/: cursortheme.cpp  cursortheme.h  dummytheme.cpp  dummytheme.h  sortproxymodel.cpp  sortproxymodel.h  thememodel.cpp  thememodel.h  xcursortheme.cpp  xcursortheme.h
src/package/: metadata.desktop
src/package/contents/ui/: Advanced.qml  DetailsDialog.qml  main.qml
src/qml/: main.qml
src/ui/: Advanced.qml  DetailsDialog.qml  advanceconfig.ui  advancedconfig.ui  main.qml  themeconfig.ui
